[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "MoriEchoPy"
version = "0.0.1"
description = "A python port of MoriEcho."
authors = ["Rafael Fillipe Silva <rfsc.mori@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rfsc-mori/mori_echo_py"
repository = "https://github.com/rfsc-mori/mori_echo_py"
packages = [
	{ include = "MoriEchoPy", from = "src" }
]
include = ["LICENSE.MIT", "py.typed"]

[tool.poetry.urls]
"Issues Tracker" = "https://github.com/rfsc-mori/mori_echo_py/issues"

[tool.poetry.scripts]
MoriEchoPy = "MoriEchoPy:main"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.linter]
optional = true

[tool.poetry.group.linter.dependencies]
mypy = "^1.8.0"
ruff = "^0.2.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
tox = "^4.12.1"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py312

[gh-actions]
python =
    3.12: py312

[testenv]
passenv = GITHUB_*
allowlist_externals = poetry

commands =
    poetry run pytest
"""
